test/files/neg/t6934/ScalaMain.scala
package test2

object ScalaMain {

  def main(args: Array[String]): Unit = {
    val a = test.JavaClass.STATIC_PROTECTED_FIELD
  }

}
